tests/ui/parser/suggest-const-for-global-var.stderr
error: expected item, found keyword `let`
  --> $DIR/suggest-const-for-global-var.rs:1:1
   |
LL | let X: i32 = 12;
   | ^^^
   | |
   | `let` cannot be used for global variables
   | help: consider using `static` or `const` instead of `let`
   |
   = note: for a full list of items that can appear in modules, see <https://doc.rust-lang.org/reference/items.html>

error: aborting due to 1 previous error

